versioned_docs/version-1.0.0/data.mdx
---
title: Data
description: CSV, GFF3, VCF, BED, JSON, BAM and more!
---

import GoslingSchema from './assets/gosling.schema.json';
import {TableWrapper} from '@site/react-components/DocComponments/table'

Users can specify the data of each visualization (i.e., `track`) through a `track.data` property.
```javascript
{
  "tracks":[{
    "data": {...}, // specify the data used in this track
    "mark": "rect",
    "color": ...,
    ...
  }]
}
``` 

## Supported Data Formats

For the flexible data exploration, Gosling supports two different kinds of datasets:

1. **Plain Datasets** (No HiGlass Server): These datasets can be directly used in Gosling without requiring any data preprocessing, 
including [CSV](#csv-no-higlass-server), [JSON](#json-no-higlass-server), [BigWig](#bigwig-no-higlass-server), [BAM](#bam-no-higlass-server),
[BED](#bed-no-higlass-server). 

2. **Pre-aggregated Datasets** (HiGlass Server): These datasets are preprocessed for the scalable data exploration and require a HiGlass server to access them in Gosling,
including [Vector](#vector-require-higlass-server), [Multivec](#multivec-require-higlass-server), and [BEDDB](#beddb-require-higlass-server).
To learn more about preprocessing your data and setting up the [server](https://github.com/higlass/higlass-server), please visit the [HiGlass website](https://docs.higlass.io/). 


### CSV (No HiGlass Server)

Any small enough tabular data files, such as tsv, csv, BED, BEDPE, and GFF, can be loaded using `"csv"` data specification.

```javascript
{
  "tracks": [
    {
      "data": {
        "url": "https://raw.githubusercontent.com/sehilyi/gemini-datasets/master/data/UCSC.HG38.Human.CytoBandIdeogram.csv",
        "type": "csv",
        "chromosomeField": "Chromosome",
        "genomicFields": ["chromStart", "chromEnd"]
      },
      ...,
  }]
}

```

<TableWrapper objName='CsvData' GoslingSchema={GoslingSchema} />

### GFF3 (No HiGlass Server)

This format allows for files that follow the [GFF3 specification](https://github.com/The-Sequence-Ontology/Specifications/blob/master/gff3.md). 

[GFF file demo](https://gosling-lang.github.io/gosling.js/?example=doc_gff)

Currently, the GFF3 file must have an accompanying index file. If you do not have an index file for your GFF3 file, you 
can create one using [tabix](http://www.htslib.org/doc/tabix.html). Otherwise, you can treat the GFF3 file as if it were a CSV file and use the CSV data specification, but this will not be as performant for large files. 

The field names correspond to the names of the columns. For example, the field which corresponds to the "start" column
is called "start". The standard GFF fields are as follows: `seq_id`, `source`, `type`, `start`, `end`, `score`, `strand`, `phase`, and `attributes`.

Here is an example GFF3 file line:

```
U00096.3	Genbank	gene	352706	354592	.	+	.	Name=prpE;gbkey=Gene;gene=prpE;gene_biotype=protein_coding;gene_synonym=ECK0332,yahU;locus_tag=b0335
```

This will be parsed as the following: 
```
{
  ​seq_id: "U00096.3"​​
  ​source: "Genbank"
  ​type: "gene"
  ​start: 352706
  ​end: 354592
  ​phase: null
  ​strand: "+"
  ​score: null
  ​attributes: Object { Name: (1) […], gbkey: (1) […], Name: (1) […], … }
  ​child_features: Array []
  ​derived_features: Array []  ​​
}
```
If we include the option `attributesToFields: [{attribute: "Name", defaultValue: "unknown"}]`, then the `Name` attribute
will included as a field:
```
{
  Name: "prpE"
  ​seq_id: "U00096.3"​​
  ​source: "Genbank"
  ​type: "gene"
  ​start: 352706
  ​end: 354592
  ​phase: null
  ​strand: "+"
  ​score: null
  ​attributes: Object { ID: (1) […], Dbxref: (2) […], Name: (1) […], … }
  ​child_features: Array []
  ​derived_features: Array []  ​​
}
```
This allows `Name` to be used as a field in Gosling to label features. 

```javascript
{
  "tracks":[{
    "data": {
      "url": "https://s3.amazonaws.com/gosling-lang.org/data/gff/E_coli_MG1655.gff3.gz",
      "indexUrl": "https://s3.amazonaws.com/gosling-lang.org/data/gff/E_coli_MG1655.gff3.gz.tbi",
      "type": "gff"
    },
    "mark": "rect", 
      "x": {"field": "start"}, // example using one of the standard fields
      "xe": {"field": "end"},
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='GffData' includeDescription={true}/>

### VCF (No HiGlass Server)

This format allow files that follow the [VCF specification](https://samtools.github.io/hts-specs/VCFv4.2.pdf). Currently, we only support the usage of VCF files that have a corresponding index file.

[VCF file demo showing indels](https://gosling-lang.github.io/gosling.js/?example=doc_vcf_indels) 

[VCF file demo showing point mutations](https://gosling-lang.github.io/gosling.js/?example=doc_vcf_point_mutations) 



```javascript
{
  "tracks":[{
    "data": {
      "url": "https://somatic-browser-test.s3.amazonaws.com/browserExamples/7a921087-8e62-4a93-a757-fd8cdbe1eb8f.consensus.20161006.somatic.indel.sorted.vcf.gz",
      "indexUrl": "https://somatic-browser-test.s3.amazonaws.com/browserExamples/7a921087-8e62-4a93-a757-fd8cdbe1eb8f.consensus.20161006.somatic.indel.sorted.vcf.gz.tbi",
      "type": "vcf",
      "sampleLength": 5000
    },
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='VcfData' includeDescription={true}/>


### JSON (No HiGlass Server)

This format allows users to include data directly in Gosling's JSON specification.

:::caution

For better rendering performance, we recommend using JSON only for small data (~100 rows).
For larger data, consider using CSV or other file formats.

:::

```javascript
{
  "tracks":[{
    "data": {
      "type": "json",
      "chromosomeField": "Chromosome",
      "genomicFields": [
          "chromStart",
          "chromEnd"
      ],
      "values": [
        {
          "Chromosome": "chr1",
          "chromStart": 0,
          "chromEnd": 2300000,
          "Name": "p36.33",
          "Stain": "gneg"
        },
        {
          "Chromosome": "chr1",
          "chromStart": 2300000,
          "chromEnd": 5300000,
          "Name": "p36.32",
          "Stain": "gpos25"
        }, ...
        ]
    },
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='JsonData'/>

The property `"genomicFieldsToConvert"` enables users to convert chromosome fields into genomic fields, which facilitates the creation of [links between various chromosomes](/docs/mark#link).

### BigWig (No HiGlass Server)

```javascript
{
  "tracks":[{
    "data": {
      "url": 'https://s3.amazonaws.com/gosling-lang.org/data/4DNFIMPI5A9N.bw',
      "type": "bigwig",
      "column": "position",
      "value": "peak"
    },
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='BigWigData' />

### BAM (No HiGlass Server)

<TableWrapper GoslingSchema={GoslingSchema} objName='BamData' includeDescription={true}/>

### BED (No HiGlass Server)
This format allows for BED files that follow the [BED specification](https://raw.githubusercontent.com/samtools/hts-specs/master/BEDv1.pdf) to be used. 
There are 12 standard fields (`chrom`, `chromStart`, `chromEnd`, `name`, `score`, `strand`, `thickStart`, `thickEnd`, `itemRgb`, `blockCount`, `blockSizes`, and `blockStarts`). 
The first three fields (`chrom`, `chromStart`, `chromEnd`) are required. If custom fields are specified, they 
will not be able to rename the first three fields.

Currently, the BED file must have an accompanying index file. If you do not have an index file for your BED file, you 
can create one using [tabix](http://www.htslib.org/doc/tabix.html). Otherwise, you can treat the BED file as if it were a 
CSV file and use the CSV data specification, but this will not be as performant for large files. 

[BED file demo](https://gosling-lang.github.io/gosling.js/?example=doc_bed)
```javascript
{
  "tracks":[{
    "data": {
      "url": "https://s3.amazonaws.com/gosling-lang.org/data/bed/chr1_CDS_BED12.bed.gz",
      "indexUrl": "https://s3.amazonaws.com/gosling-lang.org/data/bed/chr1_CDS_BED12.bed.gz.tbi"
      "type": "bed",
    },
    "mark": "rect", 
      "x": {"field": "chromStart", "type": "genomic"}, // example using one of the standard fields
      "xe": {"field": "chromEnd", "type": "genomic"},
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='BedData' includeDescription={true}/>

### Vector (Require HiGlass Server)

One-dimensional quantitative values along genomic position (e.g., bigwig) can be converted into HiGlass' `"vector"` format data. Find out more about this format at [HiGlass Docs](https://docs.higlass.io/data_preparation.html#bigwig-files).

```javascript
{
  "tracks":[{
    "data": {
      "url": 'https://resgen.io/api/v1/tileset_info/?d=VLFaiSVjTjW6mkbjRjWREA',
      "type": "vector",
      "column": "position",
      "value": "peak"
    },
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='VectorData'/>

### Multivec (Require HiGlass Server)

Two-dimensional quantitative values, one axis for genomic coordinate and the other for different samples, can be converted into HiGlass' `"multivec"` data. For example, multiple BigWig files can be converted into a single multivec file. You can also convert sequence data (FASTA) into this format where rows will be different nucleotide bases (e.g., A, T, G, C) and quantitative values represent the frequency. Find out more about this format at [HiGlass Docs](https://docs.higlass.io/data_preparation.html#multivec-files).

```javascript
{
  "tracks":[{
    "data": {
        "url": "https://resgen.io/api/v1/tileset_info/?d=UvVPeLHuRDiYA3qwFlm7xQ",
        "type": "multivec",
        "row": "sample",
        "column": "position",
        "value": "peak",
        "categories": ["sample 1", "sample 2", "sample 3", "sample 4"]
    },
    ...// other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='MultivecData'/>

 
### BEDDB (Require HiGlass Server)

Regular BED, or similar, files can be pre-aggregated for the scalable data exploration. Find our more about this format at [HiGlass Docs](https://docs.higlass.io/data_preparation.html#bed-files).

```javascript
{
  "tracks":[{
    "data": {
      "url": "https://higlass.io/api/v1/tileset_info/?d=OHJakQICQD6gTD7skx4EWA",
      "type": "beddb",
      "genomicFields": [
          {"index": 1, "name": "start"},
          {"index": 2, "name": "end"}
      ],
      "valueFields": [
          {"index": 5, "name": "strand", "type": "nominal"},
          {"index": 3, "name": "name", "type": "nominal"}
      ],
      "exonIntervalFields": [
          {"index": 12, "name": "start"},
          {"index": 13, "name": "end"}
      ]
    },
    ... // other configurations of this track
  }]
}
```

<TableWrapper GoslingSchema={GoslingSchema} objName='BeddbData'/>



## Data Transform

<span>
    Gosling supports a diverse set of data transforms, including 
    {GoslingSchema["definitions"]['DataTransform'].anyOf.map((d, i)=>{
      let name = d.$ref.replace('#/definitions/', '')
      /** 
        seperate camel-case names. 
        e.g., "JSONParseTransform" => "JSON Parse Transform"  
      */
      name = name.replace(/([a-z])([A-Z])/g, '$1 $2').replace(/([A-Z])([A-Z][a-z])/g, '$1 $2')
        // replace white space ' ' to '-' to avoid the %20 in url
        return <span key={name}> <a href={`#${name.replace(/ /g, '-').toLowerCase()}`}>
            {name}
        </a> {i==GoslingSchema["definitions"]['DataTransform'].anyOf.length-1 ? '. ': ', '} </span>})
    }
</span>


```javascript
{
  "tracks":[{
    "data": ...,
    // a list of data transforms can be applied to the data
    "dataTransform": [
          { "type": "filter", "field": "type", "oneOf": ["gene"] },
          { "type": "filter", "field": "strand", "oneOf": ["+"], "not": true }
    ],
    "mark": "rect",
    ...,
  }]
}
```

### Filter Transform

Users can apply three types of filters: `oneOf`, `inRange`, `include`.
Each filter transform has the following properties:

**Properties of One Of Filter**
<TableWrapper GoslingSchema={GoslingSchema} objName='OneOfFilter' includeDescription={true}/>

**Properties of In Range Filter**
<TableWrapper GoslingSchema={GoslingSchema} objName='RangeFilter' includeDescription={true}/>

**Properties of Include Filter**
<TableWrapper GoslingSchema={GoslingSchema} objName='IncludeFilter' includeDescription={true}/>

### Str Concat Transform

<TableWrapper GoslingSchema={GoslingSchema} objName='StrConcatTransform' includeDescription={true}/>

### Str Replace Transform 

<TableWrapper GoslingSchema={GoslingSchema} objName='StrReplaceTransform' includeDescription={true}/>

### Log Transform

<TableWrapper GoslingSchema={GoslingSchema} objName='LogTransform' includeDescription={true}/>

### Displace Transform 

<TableWrapper GoslingSchema={GoslingSchema} objName='DisplaceTransform' includeDescription={true}/>

### Exon Split Transform 

<TableWrapper GoslingSchema={GoslingSchema} objName='ExonSplitTransform' includeDescription={true}/>

### Coverage Transform

<TableWrapper GoslingSchema={GoslingSchema} objName='CoverageTransform' includeDescription={true}/>

### JSON Parse Transform

<TableWrapper GoslingSchema={GoslingSchema} objName='JsonParseTransform' includeDescription={true}/>

Apart from these data transforms, users can also aggregate data values (min, max, bin, mean, and count). [Read more about data aggregation](#x)


#### Types

##### Type:Datum

<TableWrapper GoslingSchema={GoslingSchema} objName='Datum' />

##### Type: BoundingBox
<TableWrapper GoslingSchema={GoslingSchema} objName='DisplaceTransform-properties-boundingBox' />
